--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -85,7 +85,8 @@
   "pnpm": {
     "overrides": {
       "@types/react": "19.2.7",
-      "@types/react-dom": "19.2.3"
+      "@types/react-dom": "19.2.3",
+      "d3-color": ">=3.1.0"
     }
   }
 }
