--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -87,6 +87,18 @@ CORS_ORIGINS=http://localhost:3000
 # Used for safe post-login redirects
 FRONTEND_URL=http://localhost:3000
 
+# Ops console (platform admin)
+OPS_FRONTEND_URL=http://localhost:3000
+# Cookie domain for cross-subdomain auth (e.g., .surrogacyforce.com)
+COOKIE_DOMAIN=
+# Comma-separated platform admin email allowlist
+PLATFORM_ADMIN_EMAILS=
+# HMAC secret for PII-safe audit logging (IP/user-agent hashing)
+AUDIT_HMAC_SECRET=
+# Support session configuration
+SUPPORT_SESSION_TTL_MINUTES=60
+SUPPORT_SESSION_ALLOW_READ_ONLY=false
+
 # =============================================================================
 # Dev-Only (required for /dev/* endpoints)
 # =============================================================================
