chore(ci): add pip-audit guard script for smarter vulnerability handling
- Add pip_audit_guard.py to only fail on vulnerabilities with available fixes
- Remove hardcoded ignore-vulns from pyproject.toml
- Update CI workflow to use the guard script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,7 +196,7 @@ jobs:
 
       - name: Run pip-audit (Dependency Scan)
         working-directory: apps/api
-        run: uv run --with pip-audit -- pip-audit
+        run: uv run --with pip-audit -- python scripts/pip_audit_guard.py
 
       - name: Set up pnpm
         uses: pnpm/action-setup@v2
