--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -93,7 +93,8 @@
       "@types/react": "19.2.10",
       "@types/react-dom": "19.2.3",
       "d3-color": ">=3.1.0",
-      "minimatch": "10.2.1"
+      "minimatch": "10.2.3",
+      "rollup": "4.59.0"
     },
     "packageExtensions": {
       "react-simple-maps@*": {
